--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 <body>
 
     <!-- Avocado-Bilder -->
-    <img class="avocado" id="avocado1" src="H:\Downloads\website\bilder\websiteavoccado.png" alt="Avocado Bild 1">
-    <img class="avocado" id="avocado2" src="H:\Downloads\website\bilder\websiteavoccado.png" alt="Avocado Bild 2">
-    <img class="avocado" id="avocado3" src="H:\Downloads\website\bilder\websiteavoccado.png" alt="Avocado Bild 3">
-    <img class="avocado" id="avocado4" src="H:\Downloads\website\bilder\websiteavoccado.png" alt="Avocado Bild 4">
-    <img class="avocado" id="avocado5" src="H:\Downloads\website\bilder\websiteavoccado.png" alt="Avocado Bild 5">
-    <img class="avocado" id="avocado6" src="H:\Downloads\website\bilder\websiteavoccado.png" alt="Avocado Bild 6">
+    <img class="avocado" id="avocado1" src="bilder\websiteavoccado.png" alt="Avocado Bild 1">
+    <img class="avocado" id="avocado2" src="bilder\websiteavoccado.png" alt="Avocado Bild 2">
+    <img class="avocado" id="avocado3" src="bilder\websiteavoccado.png" alt="Avocado Bild 3">
+    <img class="avocado" id="avocado4" src="bilder\websiteavoccado.png" alt="Avocado Bild 4">
+    <img class="avocado" id="avocado5" src="bilder\websiteavoccado.png" alt="Avocado Bild 5">
+    <img class="avocado" id="avocado6" src="bilder\websiteavoccado.png" alt="Avocado Bild 6">
 
     <!-- Container für Text und Button -->
     <div class="container">
