--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="container">
         <h1>Willkommen auf der Avocado Discord Seite!</h1>
         <p>Drücke den Button, um unserem Discord-Server beizutreten.</p>
-        <a href="https://discord.gg/ftfhbMn" target="_blank">
+        <a href="https://discord.gg/FaxMFwSvHY" target="_blank">
             <button class="button">Jetzt Beitreten!</button>
         </a>
     </div>
